# scalableteaching-virtualresources

./: .gitignore  LICENSE  README.md
.github/workflows/: docker-build-backend-dev.yml  docker-build-backend.yml  docker-build-dev.yml  docker-build-frontend-dev.yml  docker-build-frontend.yml  docker-build.yml
Requirements/: ConfigurationSelectionFlow.puml  PreliminaryRequirements.md
Requirements/InterviewAnswers/: Meeting 3.txt  Meeting01.txt  Meeting02.txt  Meeting04.txt  Meeting05.txt  Meeting06.txt  Meeting07.txt  Meeting08.txt  Meeting09.txt  Meeting10.txt  Meeting11.txt
Requirements/InterviewQuestions/: Questions-en.md  Questions.md
Server/: BuildBackend.py  BuildFrontend.py  Dockerfile  Dockerfile-Backend  Dockerfile-FrontendAndProxy  build.cmd  lastRun  run.ps1
Server/Docker/: docker-compose.yml
Server/OpenNebula/: IOpenNebulaAccessor.cs  LCMStates.cs  MachineActions.cs  MachineStates.cs  OpenNebula.csproj  OpenNebulaAccessor.cs  OpenNebulaResultStringCleaner.cs
Server/OpenNebulaTest/: OpenNebulaTest.csproj  Program.cs
Server/Programs_to_change_files_on_vm/: .gitignore
Server/Programs_to_change_files_on_vm/SystemConfigurator/: CMakeLists.txt  Config.json  Config.json.md  main.cpp
Server/Programs_to_change_files_on_vm/SystemConfigurator/build-deb/: Makefile
Server/Programs_to_change_files_on_vm/SystemConfigurator/src/: configuration.h  main.cpp  print.h  run.cpp  run.h  user.cpp
Server/Programs_to_change_files_on_vm/UpdateHostName/: CMakeLists.txt  README.MD  main.cpp
Server/SystemConfigurator/: .gitignore
Server/UI/: VM Deployment.bsdesign
Server/XML-RPC-Test/: Program.cs  XML-RPC-Test.csproj
Server/backend/: .gitignore  ActionTestFile  Dockerfile  Program.cs  Scalable-Teaching.sln  Startup.cs  appsettings.json  backend.csproj  backend.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
Server/front-end/: .env  .gitignore  Dockerfile  force.workflow.run  package-lock.json  package.json  vue.config.js
(+201 files in other folders)
